feat(index): implement Skills section

--- a/index.html
+++ b/index.html
@@ -43,13 +43,65 @@
 
             </div>
         </section>
-        <!-- SKILLS -->
-        <section class="home skills">
-            <h2 class="home__subtitle">Skills</h2>
-        </section>
+
         <!-- PROJECTS -->
         <section class="home projects">
             <h2 class="home__subtitle">Projetos</h2>
+        </section>
+        <!-- SKILLS -->
+        <section class="home skills">
+            <h2 class="home__subtitle">Skills</h2>
+            <div class="skills__container">
+                <article class="skills__card">
+
+                    <span class="card__badge" aria-hidden="true">
+                        <img src="/public/assets/python-logo.png" alt="Logo Python" class="badge__icon" />
+                    </span>
+
+                    <h3 class="card__title">Python</h3>
+                    <p class="card__text">
+                        Integer quisquam quasi asperiores fermentum incidunt nostrum aliquid, aperiam. Quibusdam.
+                    </p>
+                    <a class="card__link" href="#">Learn more…</a>
+                </article>
+                <article class="skills__card">
+
+                    <span class="card__badge" aria-hidden="true">
+                        <img src="/public/assets/js-logo.png" alt="Logo Python" class="badge__icon" />
+                    </span>
+
+                    <h3 class="card__title">JavaScript</h3>
+                    <p class="card__text">
+                        Integer quisquam quasi asperiores fermentum incidunt nostrum aliquid, aperiam. Quibusdam.
+                    </p>
+                    <a class="card__link" href="#">Learn more…</a>
+                </article>
+                <article class="skills__card">
+
+                    <span class="card__badge" aria-hidden="true">
+                        <img src="/public/assets/postgresql-logo.png" alt="Logo Python" class="badge__icon" />
+                    </span>
+
+                    <h3 class="card__title">PostgreSQL</h3>
+                    <p class="card__text">
+                        Integer quisquam quasi asperiores fermentum incidunt nostrum aliquid, aperiam. Quibusdam.
+                    </p>
+                    <a class="card__link" href="#">Learn more…</a>
+                </article>
+                <article class="skills__card">
+
+                    <span class="card__badge" aria-hidden="true">
+                        <img src="/public/assets/node-logo.png" alt="Logo Python" class="badge__icon" />
+                    </span>
+
+                    <h3 class="card__title">Node.js</h3>
+                    <p class="card__text">
+                        Integer quisquam quasi asperiores fermentum incidunt nostrum aliquid, aperiam. Quibusdam.
+                    </p>
+                    <a class="card__link" href="#">Learn more…</a>
+                </article>
+
+            </div>
         </section>
         <!-- ABOUT -->
         <section class="home about">
